updated layout lesson with overlap fix
updated layout lesson for fixed position top menu nav. This update allow the body to compensate for the collapsed top margin since the .main-nav menu was actually taken out of normal document flow.

--- a/8Layout Lesson/Lesson 9 Fixed Positioning/css/style.css
+++ b/8Layout Lesson/Lesson 9 Fixed Positioning/css/style.css
@@ -144,6 +144,10 @@ figcaption {
 
 @media (min-width: 769px) {
 
+	body {
+		padding-top: 68px;
+	}
+
 	.main-header {
 		position: fixed;
 		background: #fff;
